gitignore: ignore nm-connection-editor.appdata.xml file

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ m4/lt*.m4
 /cscope.po.out
 
 /network-manager-applet-*.tar.*
+/nm-connection-editor.appdata.xml
 nm-applet.conf
 nm-applet.desktop
 nm-connection-editor.desktop
