c-e: allow one VPN plugin to create multiple "Add" entires per provided service-type
One VPN plugin can support multiple "service-types", also known as
"aliases". These service-types look like a D-Bus bus name and are stored
in the connection as vpn.service-type.

Previously already, one VPN plugin could edit connections with different
service-types, using aliases. That is for example used for nm-libreswan,
which supports editing both libreswan and openswan types.

However, in "Connection Add" one plugin could only create one entry
in the list of supported types. Thus, the "vpn.service-type" could
only be set to the main service-type, and one plugin could not create
connection for their aliases.

Extend that, by allowing the VPN to specify that it supports addition
for the aliased service-types.

https://bugzilla.gnome.org/show_bug.cgi?id=767197

--- a/shared/Makefile.am
+++ b/shared/Makefile.am
@@ -4,4 +4,5 @@ EXTRA_DIST = \
      nm-default.h \
      nm-glib.h \
      nm-macros-internal.h \
-     nm-test-utils.h
+     nm-test-utils.h \
+     nm-vpn-editor-plugin-call.h
