shared: reorder and reimport shared files
On their origin, the shared files were reorganized and put
in a subdirectory "shared/nm-utils/". Do the same here, so
that the directory layout is identical to what we have in
NetworkManager's and the VPN plugin's repositories.

--- a/shared/Makefile.am
+++ b/shared/Makefile.am
@@ -1,7 +1,8 @@
 EXTRA_DIST = \
-     gsystem-local-alloc.h \
+     nm-utils/gsystem-local-alloc.h \
+     nm-utils/nm-glib.h \
+     nm-utils/nm-macros-internal.h \
+     nm-utils/nm-test-utils.h \
+     nm-utils/nm-vpn-editor-plugin-call.h \
      nm-default.h \
-     nm-glib.h \
-     nm-macros-internal.h \
-     nm-test-utils.h \
-     nm-vpn-editor-plugin-call.h
+     $(NULL)
