build: cleanup build against libnm/libnm-glib
We already define NETWORKMANAGER_COMPILATION for "nm-default.h".
Let "nm-default.h" set LIBNM_BUILD to 1 or 0 based on
NETWORKMANAGER_COMPILATION define.

Also, drop LIBNM_GLIB_BUILD as it really is just !LIBNM_BUILD.

--- a/src/utils/Makefile.am
+++ b/src/utils/Makefile.am
@@ -9,7 +9,7 @@ libutils_libnm_glib_la_SOURCES = \
 	utils.h
 
 libutils_libnm_glib_la_CPPFLAGS = \
-	-DLIBNM_GLIB_BUILD \
+	-DNETWORKMANAGER_COMPILATION=NM_NETWORKMANAGER_COMPILATION_LIB_LEGACY \
 	$(GTK_CFLAGS) \
 	$(LIBNM_GLIB_CFLAGS) \
 	"-I${top_srcdir}/shared/"
@@ -23,7 +23,6 @@ libutils_libnm_la_SOURCES = \
 	utils.h
 
 libutils_libnm_la_CPPFLAGS = \
-	-DLIBNM_BUILD \
 	$(GTK_CFLAGS) \
 	$(LIBNM_CFLAGS) \
 	"-I${top_srcdir}/shared/"
