--- a/shared/Makefile.am
+++ b/shared/Makefile.am
@@ -2,6 +2,8 @@ EXTRA_DIST = \
      nm-utils/gsystem-local-alloc.h \
      nm-utils/nm-glib.h \
      nm-utils/nm-macros-internal.h \
+     nm-utils/nm-shared-utils.c \
+     nm-utils/nm-shared-utils.h \
      nm-utils/nm-test-utils.h \
      nm-utils/nm-vpn-editor-plugin-call.h \
      nm-default.h \
