fixup! shared: import nm-shared-utils.[ch] files

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -6,6 +6,7 @@ nm-connection-editor.desktop.in
 [type: gettext/gsettings]org.gnome.nm-applet.gschema.xml.in
 nm-connection-editor.appdata.xml.in
 [type: gettext/glade]src/8021x.ui
+shared/nm-utils/nm-shared-utils.c
 src/ap-menu-item.c
 src/applet.c
 src/applet-device-broadband.c
