--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -5,6 +5,7 @@ nm-applet.desktop.in
 nm-connection-editor.desktop.in
 [type: gettext/gsettings]org.gnome.nm-applet.gschema.xml.in
 nm-connection-editor.appdata.xml.in
+shared/nm-utils/nm-shared-utils.c
 [type: gettext/glade]src/8021x.ui
 src/ap-menu-item.c
 src/applet.c
