--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -29,6 +29,7 @@ src/connection-editor/ce-page.c
 [type: gettext/glade]src/connection-editor/ce-page-general.ui
 src/connection-editor/ce-page.h
 [type: gettext/glade]src/connection-editor/ce-page-infiniband.ui
+[type: gettext/glade]src/connection-editor/ce-page-ip-tunnel.ui
 [type: gettext/glade]src/connection-editor/ce-page-ip4.ui
 [type: gettext/glade]src/connection-editor/ce-page-ip6.ui
 [type: gettext/glade]src/connection-editor/ce-page-mobile.ui
@@ -56,6 +57,7 @@ src/connection-editor/page-dsl.c
 src/connection-editor/page-ethernet.c
 src/connection-editor/page-general.c
 src/connection-editor/page-infiniband.c
+src/connection-editor/page-ip-tunnel.c
 src/connection-editor/page-ip4.c
 src/connection-editor/page-ip6.c
 src/connection-editor/page-master.c
