--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -34,6 +34,7 @@ src/connection-editor/ce-page.h
 [type: gettext/glade]src/connection-editor/ce-page-ip6.ui
 [type: gettext/glade]src/connection-editor/ce-page-mobile.ui
 [type: gettext/glade]src/connection-editor/ce-page-ppp.ui
+[type: gettext/glade]src/connection-editor/ce-page-proxy.ui
 [type: gettext/glade]src/connection-editor/ce-page-team-port.ui
 [type: gettext/glade]src/connection-editor/ce-page-team.ui
 [type: gettext/glade]src/connection-editor/ce-page-vlan.ui
@@ -63,6 +64,7 @@ src/connection-editor/page-ip6.c
 src/connection-editor/page-master.c
 src/connection-editor/page-mobile.c
 src/connection-editor/page-ppp.c
+src/connection-editor/page-proxy.c
 src/connection-editor/page-team.c
 src/connection-editor/page-team-port.c
 src/connection-editor/page-vlan.c
