all: use gresources
This seems like a good idea. Apart from a tiny speed improvement by
avoiding directory lookups when loading the UI elements and condensing
the XML data by whitespace ommission, this makes it easy to run the
applet and the connection editor without installing them.

This makes it possible to run the binaries directly from the build tree
and not pick up the glade files from whatever happens to be installed in
the system. Neat!

--- a/.gitignore
+++ b/.gitignore
@@ -45,16 +45,26 @@ org.gnome.nm-applet.gschema.valid
 org.gnome.nm-connection-editor.appdata.xml
 src/connection-editor/nm-connection-editor
 src/connection-editor/nm-connection-editor-service-glue.h
+src/connection-editor/ce-resources.c
+src/connection-editor/ce-resources.h
 src/libnma/libnma.pc
 src/libnma/NMA-1.0.gir
 src/libnma/NMA-1.0.typelib
+src/libnma/nma-resources.c
+src/libnma/nma-resources.h
 src/libnm-gtk/libnm-gtk.pc
 src/libnm-gtk/NMGtk-1.0.gir
 src/libnm-gtk/NMGtk-1.0.typelib
 src/libnm-gtk/tests/test-mobile-providers
+src/libnm-gtk/nm-resources.c
+src/libnm-gtk/nm-resources.h
 src/marshallers/nma-marshal.*
 src/nm-applet
 src/applet-dbus-bindings.h
+src/applet-resources.c
+src/applet-resources.h
+src/wireless-security/ws-resources.c
+src/wireless-security/ws-resources.h
 man/*.1
 
 /test-driver
