--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,7 +12,6 @@ nm_applet_CPPFLAGS = \
 	-DNM_VERSION_MIN_REQUIRED=NM_VERSION_1_4 \
 	-DNM_VERSION_MAX_ALLOWED=NM_VERSION_1_4 \
 	-DICONDIR=\""$(datadir)/icons"\"						\
-	-DUIDIR=\""$(uidir)"\"							\
 	-DBINDIR=\""$(bindir)"\"								\
 	-DSYSCONFDIR=\""$(sysconfdir)"\"						\
 	-DLIBEXECDIR=\""$(libexecdir)"\" \
@@ -48,6 +47,8 @@ nm_applet_SOURCES = \
 	mobile-helpers.h \
 	applet-device-bt.h \
 	applet-device-bt.c \
+	applet-resources.h \
+	applet-resources.c \
 	fallback-icon.h
 
 if WITH_WWAN
@@ -55,6 +56,10 @@ nm_applet_SOURCES += \
 	applet-device-broadband.h \
 	applet-device-broadband.c
 endif
+
+BUILT_SOURCES = \
+	applet-resources.h \
+	applet-resources.c
 
 nm_applet_LDADD = \
 	-lm \
@@ -68,8 +73,8 @@ nm_applet_LDADD = \
 	${top_builddir}/src/wireless-security/libwireless-security-libnm.la \
 	${top_builddir}/src/libnma/libnma.la
 
-uidir = $(datadir)/nm-applet
-ui_DATA = gsm-unlock.ui info.ui 8021x.ui keyring.png
+applet-resources.h: applet.gresource.xml
+	$(AM_V_GEN) $(GLIB_COMPILE_RESOURCES) $< --target=$@ --sourcedir=$(srcdir) --generate-header --internal
 
-EXTRA_DIST = $(ui_DATA)
-
+applet-resources.c: applet.gresource.xml $(shell $(GLIB_COMPILE_RESOURCES) --sourcedir=$(srcdir) --generate-dependencies $(builddir)/applet.gresource.xml)
+	$(AM_V_GEN) $(GLIB_COMPILE_RESOURCES) $< --target=$@ --sourcedir=$(srcdir) --generate-source --internal
