--- a/src/libnm-gtk/Makefile.am
+++ b/src/libnm-gtk/Makefile.am
@@ -1,8 +1,5 @@
 SUBDIRS = . tests examples
 
-uidir = $(datadir)/libnm-gtk
-ui_DATA = wifi.ui
-
 libnmgtkdir = $(includedir)/libnm-gtk
 
 libnmgtk_HEADERS = \
@@ -15,6 +12,10 @@ libnmgtk_HEADERS = \
 
 lib_LTLIBRARIES = libnm-gtk.la
 
+BUILT_SOURCES = \
+	nm-resources.h \
+	nm-resources.c
+
 libnm_gtk_la_SOURCES = \
 	nm-wifi-dialog.c \
 	nm-wireless-dialog.c \
@@ -22,6 +23,8 @@ libnm_gtk_la_SOURCES = \
 	nm-ui-utils.c \
 	nm-mobile-providers.c \
 	nm-vpn-password-dialog.c \
+	nm-resources.h \
+	nm-resources.c \
 	init.c
 
 libnm_gtk_la_CFLAGS = \
@@ -30,7 +33,6 @@ libnm_gtk_la_CFLAGS = \
 	$(GUDEV_CFLAGS) \
 	-DNETWORKMANAGER_COMPILATION=NM_NETWORKMANAGER_COMPILATION_LIB_LEGACY \
 	-DICONDIR=\""$(datadir)/icons"\" \
-	-DUIDIR=\""$(uidir)"\" \
 	-DBINDIR=\""$(bindir)"\" \
 	-DSYSCONFDIR=\""$(sysconfdir)"\" \
 	-DLIBEXECDIR=\""$(libexecdir)"\" \
@@ -52,6 +54,12 @@ EXTRA_libnm_gtk_la_DEPENDENCIES = $(srcdir)/libnm-gtk.ver
 libnm_gtk_la_LDFLAGS = -Wl,-no-undefined \
 	-Wl,--version-script=$(srcdir)/libnm-gtk.ver
 
+nm-resources.h: nm.gresource.xml
+	$(AM_V_GEN) $(GLIB_COMPILE_RESOURCES) $< --target=$@ --sourcedir=$(srcdir) --generate-header --internal
+
+nm-resources.c: nm.gresource.xml $(shell $(GLIB_COMPILE_RESOURCES) --sourcedir=$(srcdir) --generate-dependencies $(builddir)/nm.gresource.xml)
+	$(AM_V_GEN) $(GLIB_COMPILE_RESOURCES) $< --target=$@ --sourcedir=$(srcdir) --generate-source --internal
+
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libnm-gtk.pc
 
@@ -59,9 +67,9 @@ pkgconfig_DATA = libnm-gtk.pc
 INTROSPECTION_GIRS =
 
 if HAVE_INTROSPECTION
-introspection_sources =			\
-	$(filter-out			\
-		nm-wireless-dialog.%,	\
+introspection_sources =					\
+	$(filter-out					\
+		$(BUILT_SOURCES) nm-wireless-dialog.%,	\
 		$(libnmgtk_HEADERS) $(libnm_gtk_la_SOURCES))
 
 NMGtk-1.0.gir: libnm-gtk.la
@@ -85,4 +93,4 @@ check-local:
 CLEANFILES = $(gir_DATA) $(typelib_DATA)
 endif
 
-EXTRA_DIST = libnm-gtk.pc.in libnm-gtk.ver check-exports.sh $(ui_DATA)
+EXTRA_DIST = libnm-gtk.pc.in libnm-gtk.ver check-exports.sh
