--- a/src/libnma/Makefile.am
+++ b/src/libnma/Makefile.am
@@ -1,6 +1,3 @@
-uidir = $(datadir)/libnma
-ui_DATA = wifi.ui
-
 libnmadir = $(includedir)/libnma
 
 libnma_HEADERS = \
@@ -12,12 +9,18 @@ libnma_HEADERS = \
 
 lib_LTLIBRARIES = libnma.la
 
+BUILT_SOURCES = \
+	nma-resources.h \
+	nma-resources.c
+
 libnma_la_SOURCES = \
 	nma-wifi-dialog.c \
 	nma-mobile-wizard.c \
 	nma-mobile-providers.c \
 	nma-vpn-password-dialog.c \
 	nma-ui-utils.c \
+	nma-resources.h \
+	nma-resources.c \
 	init.c
 
 libnma_la_CFLAGS = \
@@ -25,7 +28,6 @@ libnma_la_CFLAGS = \
 	$(LIBNM_CFLAGS) \
 	$(GUDEV_CFLAGS) \
 	-DICONDIR=\""$(datadir)/icons"\" \
-	-DUIDIR=\""$(uidir)"\" \
 	-DBINDIR=\""$(bindir)"\" \
 	-DSYSCONFDIR=\""$(sysconfdir)"\" \
 	-DLIBEXECDIR=\""$(libexecdir)"\" \
@@ -48,6 +50,11 @@ EXTRA_libnma_la_DEPENDENCIES = $(srcdir)/libnma.ver
 libnma_la_LDFLAGS = -Wl,-no-undefined \
 	-Wl,--version-script=$(srcdir)/libnma.ver
 
+nma-resources.h: nma.gresource.xml
+	$(AM_V_GEN) $(GLIB_COMPILE_RESOURCES) $< --target=$@ --sourcedir=$(srcdir) --generate-header --internal
+
+nma-resources.c: nma.gresource.xml $(shell $(GLIB_COMPILE_RESOURCES) --sourcedir=$(srcdir) --generate-dependencies $(builddir)/nma.gresource.xml)
+	$(AM_V_GEN) $(GLIB_COMPILE_RESOURCES) $< --target=$@ --sourcedir=$(srcdir) --generate-source --internal
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libnma.pc
@@ -75,5 +82,3 @@ typelib_DATA = $(INTROSPECTION_GIRS:.gir=.typelib)
 
 CLEANFILES = $(gir_DATA) $(typelib_DATA)
 endif
-
-EXTRA_DIST = libnma.pc.in libnma.ver $(ui_DATA)
