build: update m4/compiler_options.m4 with latest changes from NetworkManager
- new warning flags
  - add -Wextra
  - add -Wimplicit-fallthrough
  - add -Wno-missing-field-initializers
  - add -Wno-format-truncation

- compile with -gnu99 instead of -gnu89

- make the --enable-more-warning option configurable for the
  NM_COMPILER_WARNINGS macro.

--- a/configure.ac
+++ b/configure.ac
@@ -145,7 +145,7 @@ AC_PATH_PROG(GLIB_COMPILE_RESOURCES, glib-compile-resources)
 dnl
 dnl Compiler flags
 dnl
-NM_COMPILER_WARNINGS
+NM_COMPILER_WARNINGS([yes])
 
 
 AC_ARG_WITH(more-asserts,
