build: merge icons/**/Makefile.am in toplevel Makefile.am

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,14 +2,115 @@ include $(GLIB_MAKEFILE)
 
 ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}
 
+EXTRA_DIST =
+
 SUBDIRS = \
 	src \
-	icons \
 	po \
 	man \
 	shared
 
-EXTRA_DIST = \
+###############################################################################
+
+icon16dir = $(datadir)/icons/hicolor/16x16/apps
+icon16_DATA = \
+	icons/16/nm-device-wired.png \
+	icons/16/nm-no-connection.png \
+	icons/16/nm-vpn-standalone-lock.png
+EXTRA_DIST += $(icon16_DATA)
+
+icon22dir = $(datadir)/icons/hicolor/22x22/apps
+icon22_DATA = \
+	icons/22/nm-adhoc.png \
+	icons/22/nm-device-wired.png \
+	icons/22/nm-device-wwan.png \
+	icons/22/nm-mb-roam.png \
+	icons/22/nm-no-connection.png \
+	icons/22/nm-secure-lock.png \
+	icons/22/nm-signal-00.png \
+	icons/22/nm-signal-100.png \
+	icons/22/nm-signal-25.png \
+	icons/22/nm-signal-50.png \
+	icons/22/nm-signal-75.png \
+	icons/22/nm-stage01-connecting01.png \
+	icons/22/nm-stage01-connecting02.png \
+	icons/22/nm-stage01-connecting03.png \
+	icons/22/nm-stage01-connecting04.png \
+	icons/22/nm-stage01-connecting05.png \
+	icons/22/nm-stage01-connecting06.png \
+	icons/22/nm-stage01-connecting07.png \
+	icons/22/nm-stage01-connecting08.png \
+	icons/22/nm-stage01-connecting09.png \
+	icons/22/nm-stage01-connecting10.png \
+	icons/22/nm-stage01-connecting11.png \
+	icons/22/nm-stage02-connecting01.png \
+	icons/22/nm-stage02-connecting02.png \
+	icons/22/nm-stage02-connecting03.png \
+	icons/22/nm-stage02-connecting04.png \
+	icons/22/nm-stage02-connecting05.png \
+	icons/22/nm-stage02-connecting06.png \
+	icons/22/nm-stage02-connecting07.png \
+	icons/22/nm-stage02-connecting08.png \
+	icons/22/nm-stage02-connecting09.png \
+	icons/22/nm-stage02-connecting10.png \
+	icons/22/nm-stage02-connecting11.png \
+	icons/22/nm-stage03-connecting01.png \
+	icons/22/nm-stage03-connecting02.png \
+	icons/22/nm-stage03-connecting03.png \
+	icons/22/nm-stage03-connecting04.png \
+	icons/22/nm-stage03-connecting05.png \
+	icons/22/nm-stage03-connecting06.png \
+	icons/22/nm-stage03-connecting07.png \
+	icons/22/nm-stage03-connecting08.png \
+	icons/22/nm-stage03-connecting09.png \
+	icons/22/nm-stage03-connecting10.png \
+	icons/22/nm-stage03-connecting11.png \
+	icons/22/nm-tech-3g.png \
+	icons/22/nm-tech-cdma-1x.png \
+	icons/22/nm-tech-edge.png \
+	icons/22/nm-tech-evdo.png \
+	icons/22/nm-tech-gprs.png \
+	icons/22/nm-tech-hspa.png \
+	icons/22/nm-tech-lte.png \
+	icons/22/nm-tech-umts.png \
+	icons/22/nm-vpn-active-lock.png \
+	icons/22/nm-vpn-connecting01.png \
+	icons/22/nm-vpn-connecting02.png \
+	icons/22/nm-vpn-connecting03.png \
+	icons/22/nm-vpn-connecting04.png \
+	icons/22/nm-vpn-connecting05.png \
+	icons/22/nm-vpn-connecting06.png \
+	icons/22/nm-vpn-connecting07.png \
+	icons/22/nm-vpn-connecting08.png \
+	icons/22/nm-vpn-connecting09.png \
+	icons/22/nm-vpn-connecting10.png \
+	icons/22/nm-vpn-connecting11.png \
+	icons/22/nm-vpn-connecting12.png \
+	icons/22/nm-vpn-connecting13.png \
+	icons/22/nm-vpn-connecting14.png \
+	icons/22/nm-wwan-tower.png
+EXTRA_DIST += $(icon22_DATA)
+
+icon32dir = $(datadir)/icons/hicolor/32x32/apps
+icon32_DATA = \
+	icons/32/nm-device-wired.png \
+	icons/32/nm-no-connection.png
+EXTRA_DIST += $(icon32_DATA)
+
+icon48dir = $(datadir)/icons/hicolor/48x48/apps
+icon48_DATA = \
+	icons/48/nm-device-wireless.png
+EXTRA_DIST += $(icon48_DATA)
+
+iconscalabledir=$(datadir)/icons/hicolor/scalable/apps
+iconscalable_DATA = \
+	icons/scalable/nm-device-wired.svg \
+	icons/scalable/nm-no-connection.svg
+EXTRA_DIST += $(iconscalable_DATA)
+
+###############################################################################
+
+EXTRA_DIST += \
 	CONTRIBUTING \
 	intltool-extract.in \
 	intltool-merge.in \
