build: merge src/libnm-gtk/Makefile.am in toplevel Makefile.am

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,11 @@
 include $(GLIB_MAKEFILE)
+-include $(INTROSPECTION_MAKEFILE)
 
 ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}
 
 BUILT_SOURCES =
+
+lib_LTLIBRARIES =
 
 noinst_LTLIBRARIES =
 
@@ -11,6 +14,8 @@ noinst_PROGRAMS =
 check_PROGRAMS =
 
 check_programs =
+
+check_local =
 
 TESTS =
 
@@ -22,6 +27,20 @@ DISTCLEANFILES =
 
 DISTCHECK_CONFIGURE_FLAGS = \
 	--enable-more-warnings=yes
+
+pkgconfig_DATA =
+
+pkgconfigdir = $(libdir)/pkgconfig
+
+girdir = $(datadir)/gir-1.0
+gir_DATA = $(INTROSPECTION_GIRS)
+BUILT_SOURCES += $(gir_DATA)
+
+typelibdir = $(libdir)/girepository-1.0
+typelib_DATA = $(INTROSPECTION_GIRS:.gir=.typelib)
+BUILT_SOURCES += $(typelib_DATA)
+
+INTROSPECTION_GIRS =
 
 SUBDIRS = \
 	. \
@@ -286,7 +305,126 @@ EXTRA_DIST += \
 
 ###############################################################################
 
+BUILT_SOURCES += \
+	src/libnm-gtk/nm-resources.h \
+	src/libnm-gtk/nm-resources.c
+
+src/libnm-gtk/nm-resources.h: src/libnm-gtk/nm.gresource.xml
+	$(AM_V_GEN) $(GLIB_COMPILE_RESOURCES) $< --target=$@ --sourcedir=$(srcdir)/src/libnm-gtk --generate-header --internal
+
+src/libnm-gtk/nm-resources.c: src/libnm-gtk/nm.gresource.xml $(shell $(GLIB_COMPILE_RESOURCES) --sourcedir=$(srcdir)/src/libnm-gtk --generate-dependencies $(srcdir)/src/libnm-gtk/nm.gresource.xml)
+	$(AM_V_GEN) $(GLIB_COMPILE_RESOURCES) $< --target=$@ --sourcedir=$(srcdir)/src/libnm-gtk --generate-source --internal
+
+
+src_libnm_gtk_libnmgtkdir = $(includedir)/libnm-gtk
+
+src_libnm_gtk_libnmgtk_HEADERS = \
+	src/libnm-gtk/nm-wifi-dialog.h \
+	src/libnm-gtk/nm-wireless-dialog.h \
+	src/libnm-gtk/nm-mobile-wizard.h \
+	src/libnm-gtk/nm-ui-utils.h \
+	src/libnm-gtk/nm-mobile-providers.h \
+	src/libnm-gtk/nm-vpn-password-dialog.h
+
+
+lib_LTLIBRARIES += src/libnm-gtk/libnm-gtk.la
+
+src_libnm_gtk_libnm_gtk_la_SOURCES = \
+	src/libnm-gtk/nm-resources.h \
+	src/libnm-gtk/nm-resources.c \
+	\
+	src/libnm-gtk/nm-wifi-dialog.c \
+	src/libnm-gtk/nm-wireless-dialog.c \
+	src/libnm-gtk/nm-mobile-wizard.c \
+	src/libnm-gtk/nm-ui-utils.c \
+	src/libnm-gtk/nm-mobile-providers.c \
+	src/libnm-gtk/nm-vpn-password-dialog.c \
+	src/libnm-gtk/init.c
+
+src_libnm_gtk_libnm_gtk_la_CFLAGS = \
+	-DNETWORKMANAGER_COMPILATION=NM_NETWORKMANAGER_COMPILATION_LIB_LEGACY \
+	-DICONDIR=\""$(datadir)/icons"\" \
+	-DBINDIR=\""$(bindir)"\" \
+	-DSYSCONFDIR=\""$(sysconfdir)"\" \
+	-DLIBEXECDIR=\""$(libexecdir)"\" \
+	-DDATADIR=\""$(datadir)"\" \
+	-DAUTOSTARTDIR=\""$(sysconfdir)/xdg/autostart"\" \
+	-DNMALOCALEDIR=\"$(datadir)/locale\" \
+	"-I$(srcdir)/shared" \
+	"-I$(srcdir)/src/utils" \
+	"-I$(srcdir)/src/wireless-security" \
+	"-I$(srcdir)/src/libnm-gtk" \
+	$(GTK_CFLAGS) \
+	$(LIBNM_GLIB_CFLAGS) \
+	$(GUDEV_CFLAGS)
+
+src_libnm_gtk_libnm_gtk_la_LIBADD = \
+	src/wireless-security/libwireless-security-libnm-glib.la \
+	$(GTK_LIBS) \
+	$(LIBNM_GLIB_LIBS) \
+	$(GUDEV_LIBS)
+
+EXTRA_src_libnm_gtk_libnm_gtk_la_DEPENDENCIES = src/libnm-gtk/libnm-gtk.ver
+
+src_libnm_gtk_libnm_gtk_la_LDFLAGS = \
+	-Wl,-no-undefined \
+	-Wl,--version-script=$(srcdir)/src/libnm-gtk/libnm-gtk.ver
+
+check-local-exports-libnm-gtk:
+	$(srcdir)/src/libnm-gtk/check-exports.sh $(builddir)/src/libnm-gtk/.libs/libnm-gtk.so $(srcdir)/src/libnm-gtk/libnm-gtk.ver
+
+check_local += check-local-exports-libnm-gtk
+
+
+pkgconfig_DATA += src/libnm-gtk/libnm-gtk.pc
+
+if HAVE_INTROSPECTION
+src/libnm-gtk/NMGtk-1.0.gir: src/libnm-gtk/libnm-gtk.la
+src_libnm_gtk_NMGtk_1_0_gir_INCLUDES = NMClient-1.0 NetworkManager-1.0 Gtk-3.0
+src_libnm_gtk_NMGtk_1_0_gir_EXPORT_PACKAGES = libnm-gtk
+src_libnm_gtk_NMGtk_1_0_gir_CFLAGS = $(src_libnm_gtk_libnm_gtk_la_CFLAGS)
+src_libnm_gtk_NMGtk_1_0_gir_LIBS = src/libnm-gtk/libnm-gtk.la
+src_libnm_gtk_NMGtk_1_0_gir_FILES = \
+	$(filter-out \
+		$(BUILT_SOURCES) src/libnm-gtk/nm-wireless-dialog.%, \
+		$(src_libnm_gtk_libnmgtk_HEADERS) $(src_libnm_gtk_libnm_gtk_la_SOURCES))
+src_libnm_gtk_NMGtk_1_0_gir_SCANNERFLAGS = --warn-all --identifier-prefix=NMA --symbol-prefix=nma
+INTROSPECTION_GIRS += src/libnm-gtk/NMGtk-1.0.gir
+endif
+
+
+check_programs += src/libnm-gtk/tests/test-mobile-providers
+
+src_libnm_gtk_tests_test_mobile_providers_CPPFLAGS = \
+	-DTEST_DATA_DIR=\""$(abs_srcdir)/src/libnm-gtk/tests"\" \
+	"-I$(srcdir)/shared" \
+	"-I$(srcdir)/src/libnm-gtk" \
+	$(GTK_CFLAGS) \
+	$(LIBNM_GLIB_CFLAGS)
+
+src_libnm_gtk_tests_test_mobile_providers_LDADD = \
+	src/libnm-gtk/libnm-gtk.la \
+	$(LIBNM_GLIB_LIBS)
+
+
+EXTRA_DIST += \
+	src/libnm-gtk/libnm-gtk.pc.in \
+	src/libnm-gtk/libnm-gtk.ver \
+	src/libnm-gtk/check-exports.sh \
+	src/libnm-gtk/wifi.ui \
+	src/libnm-gtk/nm.gresource.xml \
+	\
+	src/libnm-gtk/tests/iso3166-test.xml \
+	src/libnm-gtk/tests/serviceproviders-test.xml \
+	\
+	src/libnm-gtk/examples/mobile-providers.js \
+	$(NULL)
+
+###############################################################################
+
 check_PROGRAMS += $(check_programs)
+
+check-local: $(check_local)
 
 TESTS += $(check_programs)
 
@@ -328,6 +466,9 @@ EXTRA_DIST += \
 	$(desktop_in_files)
 
 CLEANFILES += \
+	$(INTROSPECTION_GIRS) \
+	$(typelib_DATA) \
+	\
 	$(autostart_DATA) \
 	$(desktop_DATA) \
 	$(appdata_DATA) \
